package com.company.tictactoe;

public interface Player {
    int getWinNum();
    void setWinNum(int num);
    String getInfo();
}
